http://li3.me/docs/specs/accepted/LSR-0-coding.md

New updates are grouped by person (committer/merger), at the top of the file.
All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.


2018-10-03 niel
	Fix: Make sure newly activated groups have TPG tables, if TPG mode is enabled and MGR mode is not.
2018-10-02 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.11.0


2018-09-18 niel
	Fix: Updated scripts in .../misc/testing/DB to use modern require_once syntax (instead of
		nesting multiple dirname() calls. Also added a new require_once to two scripts that need
		.../configuration/settings.php to run. Note they will cause an error if the file does not
		exist, but it should be obvious to the user what the problem is.
		 If any other scripts are complaining about missing nZEDb_* or other constants let me know
		 and I'll update them as well.
2018-09-03 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.10.0


2018-07-31 niel
	Mrg: Bring in updates for PHP 7.2 compatibility.
		***NOTE*** You *must* run `composer install` manually as the lithium framework version has
		changed and your current one will not have some of the new stuff that this update adds.
2018-07-30 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.9.0


2018-07-18 niel
	Fix: Check for whether $active is null, as empty also includes false.
2018-07-17 niel
	Fix: \app\models\Groups::getRange() to correctly handle pagination and filtering by a groupname.
	Fix: Query string for group (in)active pages pagination.
	Fix: Quotation marks around $groupname need to be double, not single.
2018-07-13 Bart39
	Fix: undefined index 'groupname' for Admin grouplist active/inactive pages.
	Fix: Admin grouplist inactive page returning active groups.
2018-07-13 niel