@@ -10,6 +10,9 @@ NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
 
+2018-10-12 niel
+	Chg: Rename updateTimeCheck function to updatedRecently. Change it to return true if the entry
+		was updated within the last week, false otherwise.
 2018-10-03 niel
 	Fix: Make sure newly activated groups have TPG tables, if TPG mode is enabled and MGR mode is not.
 2018-10-02 niel
